BUG: fix missing / unreadable close button on notifications

--- a/src/css/component/notifications/notifications-decktracker.scss
+++ b/src/css/component/notifications/notifications-decktracker.scss
@@ -52,6 +52,7 @@
 
 		&:hover {
 			color: #101530;
+			--icon-color: #101530;
 			background: #9fb6d7;
 		}
 	}
